--- a/team.html
+++ b/team.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device width, initial scale-1.0">
-    <title>Q1GFA3_Li_rccarrillo</title>
+    <title>Q1QP_Li_rccarrillo</title>
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
     <style>
 
     </style>
@@ -42,7 +43,7 @@
             <ul>Date of Birth: May 10, 2009</ul>
             <ul>Blood type: B+</ul>
             <ul>Background:</ul> 
-                <ol>- Graduated elementary school ay Ateneo de Davao University</ol>
+                <ol>- Graduated elementary school at Ateneo de Davao University</ol>
                 <ol>- Goes to Philippine Science Southern Mindanao Campus</ol>
                 <ol>- Social Media Committee Head of Batch 2027</ol>
                 <ol>- Teacher for Art Iskollective</ol>
