--- a/data.html
+++ b/data.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device width, initial scale-1.0">
-    <title>Q1GFA3_Li_rccarrillo</title>
+    <title>Q1QP_Li_rccarrillo</title>
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
     <style>
 
     </style>
